environments/d9d0a971c0a80a641c20b13d99a48576-f90df054133002003ff3691c2c6a5e11-1/aap-instance/base/eda_route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-sandbox
  name: d9d0a971c0a80a641c20b13d99a48576-f90df054133002003ff3691c2c6a5e11-1-eda
  labels:
    app.kubernetes.io/managed-by: eda-operator
    app.kubernetes.io/part-of: d9d0a971c0a80a641c20b13d99a48576-f90df054133002003ff3691c2c6a5e11-1-eda
    app.kubernetes.io/name: d9d0a971c0a80a641c20b13d99a48576-f90df054133002003ff3691c2c6a5e11-1-eda
    app.kubernetes.io/operator-version: '2.4'
    app.kubernetes.io/instance: ${BRANCH_NAME}-${TEAM_NAME}-${INSTANCE_ID}-eda
spec:
  host: f90df054133002003ff3691c2c6a5e11-eda-1.apps.k8s.sandbox1760.opentlc.com
  to:
    kind: Service
    name: d9d0a971c0a80a641c20b13d99a48576-f90df054133002003ff3691c2c6a5e11-1-eda-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
